<resources>
    <string name="app_name">Wine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_search">搜索</string>
    <string name="menu_favorites">我的收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_version">版本信息</string>
    <string name="menu_history">浏览记录</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
