<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">
    <fragment
        android:name="com.example.wine.ui.home.HomeFragment"
        android:id="@+id/nav_main"
        android:label="酒知道"
        tools:layout="@layout/fragment_home"
        >
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.wine.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.wine.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.wine.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.wine.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_version"
        android:name="com.example.wine.ui.version.VersionFragment"
        android:label="@string/menu_version"
        tools:layout="@layout/fragment_version" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.wine.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>